<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/colorPrimary"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_gym"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/gymWorkOutType"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:hint="@string/hint_type"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/GymWorkOut"
                android:layout_below="@+id/gymWorkOutType"
                android:layout_width="match_parent"
                android:hint="@string/hint_workout"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/setItem"
                android:layout_below="@+id/GymWorkOut"
                android:layout_width="match_parent"
                android:hint="@string/hint_set_reps"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/GymWeights"
                android:layout_below="@+id/setItem"
                android:layout_width="match_parent"
                android:hint="@string/hint_gym_weight"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_below="@+id/GymWeights"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>